tests/negative/regression/r11.orng
fn main()->() {
    let (a, b, c): []String
}